[tool.poetry]
name = "mudbungie-net"
version = "0.1.0"
description = ""
authors = ["mudbungie <mudbungie@gmail.com>"]
readme = "README.md"
packages = [{include = "mudbungie"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
