[tool.poetry]
name = "mudbungie-net"
version = "0.1.0"
description = ""
authors = ["mudbungie <mudbungie@gmail.com>"]
readme = "README.md"
packages = [{include = "mudbungie"}]

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "^20.1.0"
requests = "^2.28.1"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
